--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ click==8.0.4
 Flask==2.0.3
 flask-restplus==0.13.0
 Flask-Script==2.0.6
+gunicorn==20.1.0
 idna==3.3
 importlib-resources==5.4.0
 itsdangerous==2.1.2
